trying to fix searchbar overflow issue with js

--- a/src/style.css
+++ b/src/style.css
@@ -36,7 +36,7 @@ header {
 }
 
 header img {
-    max-width: 200%;
+    max-width: 20%;
 }
 main {
     display: flex;
